--- a/profapp/templates/company/company_partner_details.html
+++ b/profapp/templates/company/company_partner_details.html
@@ -18,7 +18,7 @@
             $scope.url_company_partner_update = {{ raw_url_for('portal.company_partner_update')|safe }};
             $scope.update = function () {
                 $scope.user_right ? window.location.href = $scope.url_company_partner_update({
-                    'employeer_id':$scope.employeer.id,
+                    'company_id':$scope.employeer.id,
                     'member_id': $scope.member.company.id
                 }) : add_message('Sorry!You haven\'t got  appropriate rights!', 'danger', 8000)
             }
