fix help message

--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -74,6 +74,7 @@
         };
 
         $scope.changeLanguage = function(lang){
+            console.log(lang)
             $ok('{{ url_for('user.change_language') }}', {'language': lang}, function(resp) {
                 location.reload();
             });
