--- a/profapp/templates/front/forester/subscribe_to_portal.html
+++ b/profapp/templates/front/forester/subscribe_to_portal.html
@@ -1,1 +1,1 @@
-<a target="profireader_subscribe" href={{ "//profireader.com" }}><img src="//static.profireader.com/static/front/img/profireader_simple_logo.png" width="10%"/></a>
+<a target="profireader_subscribe" href={{ "//profireader.com" }}><img src="//static.profireader.com/static/favicon.ico" width="10%"/></a>
