--- a/profapp/templates/front/spring/subscribe_to_portal.html
+++ b/profapp/templates/front/spring/subscribe_to_portal.html
@@ -1,2 +1,2 @@
 <a target="profireader_subscribe" href={{ "//profireader.com"}}><img
-     style="width: 5%" src="//static.profireader.com/static/front/img/profireader_simple_logo.png" /></a>
+     style="width: 5%" src="//static.profireader.com/static/favicon.ico" /></a>
