--- a/profapp/templates/front/forester/subscribe_to_portal.html
+++ b/profapp/templates/front/forester/subscribe_to_portal.html
@@ -1,1 +1,2 @@
-<a target="profireader_subscribe" href={{ "//profireader.com" }}><img src="//static.profireader.com/static/favicon.ico" width="10%"/></a>
+<a target="profireader_subscribe" href="//profireader.com/reader/list_reader_from_front/{{ g.portal.id }}"><img
+     style="width: 35px" src="//static.profireader.com/static/favicon.ico" /></a>
