rewrite rights and moved them into approriate classes

--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -83,7 +83,7 @@
                                 <li ng-click="add_to_favorite(article)">
                                     <i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i>
                                     <i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
-                                    {{_('Favorite') }}
+                                    {{_('Bookmark') }}
                                 </li>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
