--- a/profapp/templates/_ruslan/reader/_reader_nav.html
+++ b/profapp/templates/_ruslan/reader/_reader_nav.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <ul>
                 <li><a pr_test="UserNews" class="reader_button_list" href="{{ url_for('reader.list_reader') }}">{{ _('News') }}</a></li>
-                <li><a pr_test="UserFavorites" class="reader_button_favorite" href="{{ url_for('reader.list_reader', favorite=True) }}">{{ _('Favorite') }}</a></li>
+                <li><a pr_test="UserFavorites" class="reader_button_favorite" href="{{ url_for('reader.list_reader', favorite=True) }}">{{ _('Bookmark') }}</a></li>
                 <li><a pr_test="UserSubscriptions" class="reader_button_profile" href="{{ url_for('reader.profile') }}" >{{ _('Subscriptions') }}</a></li>
             </ul>
         </div>
