fix creating new portal if portal of company already exist

--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -37,13 +37,13 @@
                         $scope.url_portal_profile({'create_or_update': 'create', 'company_id': company_id});
             };
 
-            $scope.portal_update = function (company_id, portal_id) {
-                window.location.href =
-                        $scope.url_portal_profile({
-                            'create_or_update': 'update', 'company_id': company_id,
-                            'portal_id': portal_id
-                        });
-            };
+{#            $scope.portal_update = function (company_id, portal_id) {#}
+{#                window.location.href =#}
+{#                        $scope.url_portal_profile({#}
+{#                            'create_or_update': 'update', 'company_id': company_id,#}
+{#                            'portal_id': portal_id#}
+{#                        });#}
+{#            };#}
 
 
             $scope.edit = function () {
