--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -36,7 +36,7 @@
                 window.location.href =
                         $scope.url_portal_profile({'create_or_update': 'create', 'company_id': company_id});
             };
-
+{#            YG--- fix creating new portal if portal of company already exist #}
 {#            $scope.portal_update = function (company_id, portal_id) {#}
 {#                window.location.href =#}
 {#                        $scope.url_portal_profile({#}
