--- a/profapp/templates/front/forester/nav.html
+++ b/profapp/templates/front/forester/nav.html
@@ -3,6 +3,7 @@
     <div class="well">
         <div class="social-block">
             {% include 'search_block.html' %}
+            {% include 'user_profile.html' %}
             {#        {% include 'social.html' %}#}
             {% include 'subscribe_to_portal.html' %}
         </div>
