--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -34,6 +34,19 @@
                 }
             };
 
+            $scope.grid_action = function (id, action, row, column_name) {
+                if(row.actions[action] == true){
+                        console.log(row)
+                    location.href = $scope.url_publication_update({publication_id: row.id})
+                }else{
+                    add_message(row.actions[action], 'danger', 3000)
+                }
+            };
+
+            $scope.url_publication_details = function(host, publication_id) {
+                return '//'+host+'/details/'+publication_id
+            }
+
 
             {% raw %}
 
@@ -58,9 +71,11 @@
                         afilter: {type: 'date_range'}
                     },{
                         name: 'portal.name', type: 'link',
-                        href: 'url_edit_article_portal({article_portal_division_id: row.entity.id})',
+                        href: 'url_publication_details(row.entity.portal.host, row.entity.id)',
                         classes: 'link',
                         filter: {type:'multi_select'}
+                    },{
+                        name:'actions', type: 'actions', onclick: 'grid_action'
                     },{
                         name: 'status',
                         filter: {type: 'multi_select'}
