--- a/profapp/templates/partials/article_details.html
+++ b/profapp/templates/partials/article_details.html
@@ -3,7 +3,7 @@
     <h2 class="item-title">{{ article['title']|safe }}</h2>
 
     <h3 class="item-subtitle">{{ article['subtitle']|safe }}</h3>
-    <div class="s-cover-l" style="padding-bottom: 10px"><img width="300px" {{ prImage(article['image_file_id']) }}></div>
+    <div class="s-cover-l" style="padding-bottom: 10px"><img width="300" height="240"  {{ prImage(article['image_file_id']) }}></div>
     <div class="article-short">
         {{ article['short']|safe }}
     </div>
