user logo+ subdomain correction

--- a/profapp/templates/front/forester/user_profile.html
+++ b/profapp/templates/front/forester/user_profile.html
@@ -3,7 +3,7 @@
    aria-haspopup="true"
    href="//profireader.com{{ url_for('user.profile', user_id = g.user.id) }}"
    aria-expanded="false">
-    <img style="width: 10em" pr-image=""
+    <img style="width: 35px" pr-image=""
          src="{{ g.user.profireader_avatar_url }}"
          class="person-small-cover" >{{ g.user.profireader_name }}
 </a>
@@ -12,7 +12,7 @@
    aria-haspopup="true"
    href="//profireader.com{{ url_for('user.profile', user_id = g.user.id) }}"
    aria-expanded="false">
-    <img style="width: 10em" pr-image=""
+    <img style="width: 35px" pr-image=""
          src="{{ g.user.profireader_avatar_url }}"
          class="person-small-cover" >{{ g.user.profireader_name }}
 </a>
