--- a/profapp/templates/front/bird/nav.html
+++ b/profapp/templates/front/bird/nav.html
@@ -20,7 +20,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="centred">
-                <a class="logo" href="/"><img style="height: 10em" src="{{ fileUrl(portal.logo_file_id) }}" alt="Portal logo"></a>
+                <a class="logo" href="/"><img src="{{ fileUrl(portal.logo_file_id) }}" alt="Portal logo"></a>
             </div>
             <ul class="nav navbar-nav">
                 {% for division in portal.divisions %}
