--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -54,6 +54,15 @@
                 class="glyphicon glyphicon-repeat"></span></span>
 
         <input type="hidden" ng-model="data.article.image_file_id">
+        <div>
+            <input ng-model="zoom" /><br/>
+            <input ng-model="origin[0]" /><br/>
+            <input ng-model="origin[1]" /><br/>
+            <input ng-model="coordinates[0]" /><br/>
+            <input ng-model="coordinates[1]" /><br/>
+            <input ng-model="coordinates[2]" /><br/>
+            <input ng-model="coordinates[3]" /><br/>
+        </div>
 
     </div>
 
