--- a/profapp/templates/partials/base_profireader.html
+++ b/profapp/templates/partials/base_profireader.html
@@ -69,8 +69,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="{{ url_for('user.profile', user_id=g.user.id) }}">{{ _('My
-                                            Profile') }}</a></li>
+                                        <a href="{{ url_for('user.profile', user_id=g.user.id) }}">{{ _('My Profile') }}</a></li>
                                     {#                                    <li><a href="{{ url_for('auth.change_password') }}">{{ '{{' }}_('Change Password'){{ '}}' }}</a></li>#}
                                     {#                                    <li><a href="{{ url_for('auth.change_email_request') }}">{{ '{{' }}_('Change Email'){{ '}}' }}</a></li>#}
                                     {#                                    <li><a href="{{ url_for('company.companies') }}">{{ '{{' }}_('Company'){{ '}}' }}</a></li>#}
