--- a/profapp/templates/front/bird/layout.html
+++ b/profapp/templates/front/bird/layout.html
@@ -14,7 +14,7 @@
 <script>
     window.addEventListener("message", function (messageevent) {
         if (messageevent.data && messageevent.data.profireader_session_id) {
-            $.cookie('beaker.session.id', messageevent.data.profireader_session_id);
+            $.cookie('beaker.session.id', messageevent.data.profireader_session_id, {path: '/'});
             window.location.reload();
             }
     }, false);
