--- a/profapp/templates/front/forester/layout.html
+++ b/profapp/templates/front/forester/layout.html
@@ -12,13 +12,15 @@
 {% endif %}>
 
 <script>
+
     window.addEventListener("message", function (messageevent) {
         if (messageevent.data && messageevent.data.profireader_session_id) {
-            $.cookie('beaker.session.id', messageevent.data.profireader_session_id);
+            $.cookie('beaker.session.id', messageevent.data.profireader_session_id, {path: '/'});
             window.location.reload();
             }
     }, false);
-    $('body').prepend('<iframe style="positin: absolute; width: 1px; height: 1px; visibility: none; left: -1px;" src="https://profireader.com/tools/SSO/'+$.cookie('beaker.session.id')+'/"></iframe>');
+    $('body').prepend('<iframe style="position: absolute; width: 1px; height: 1px; visibility: none; left: -1px;" src="https://profireader.com/tools/SSO/'+$.cookie('beaker.session.id')+'/"></iframe>');
+
 </script>
 
 
