the same session on all portals (done 100%)

--- a/profapp/templates/front/bird/layout-wbg.html
+++ b/profapp/templates/front/bird/layout-wbg.html
@@ -2,6 +2,7 @@
 <html lang="{{ lang }}">
 <head>
     {% include 'head.html' %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 </head>
 
 <body {% if member_company %}
