--- a/profapp/templates/front/forester/nav.html
+++ b/profapp/templates/front/forester/nav.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+{% for article_id, article in articles.items() %}
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="well">
         <div class="social-block">
@@ -20,8 +21,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="centred">
-                <a class="logo" href="/"><img src="{{ fileUrl(portal.logo_file_id) }}" alt="Portal logo"></a>
+                <a class="logo" href="/"><img {{ prImage(portal.logo_file_id)}}  alt="Portal logo" class="block-item-img"></a>
             </div>
+
             <ul class="nav navbar-nav">
                 {% for division in portal.divisions %}
                     {% if division.portal_division_type_id != 'index' %}
@@ -37,4 +39,5 @@
     </div>
 
 </nav>
+{% endfor %}
 
