--- a/profapp/templates/company/company_employee_update.html
+++ b/profapp/templates/company/company_employee_update.html
@@ -13,7 +13,6 @@
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_employees');
 
             $scope.url_company_employee_list = {{ raw_url_for('company.employees')|safe }};
-            $scope.user_right = {{ user_right_in|safe }};
             $scope.after_save = function () {
                 window.location.href = $scope.url_company_employee_list({
                     'company_id': $scope.data.employer.id
@@ -27,8 +26,7 @@
     {% raw %}
 
     <div ng-controller="company_employee_update" ng-cloak>
-        <div style="text-align: center" ng-if="!user_right"><h2><div>{{ _('Sorry!!!You haven\'t got appropriate rights!') }}</div></h2></div>
-        <div af af-after-save="after_save" af-watch="data.employment" ng-model="data" pr-user-rights="user_right">
+        <div af af-after-save="after_save" af-watch="data.employment" ng-model="data" >
             <h2>
                 <img class="person-small-cover" pr-image
                      pr-no-image="{{ data.employee.profireader_small_avatar_url }}"/>
