--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -35,15 +35,18 @@
             $scope.noData = 'No publications';
 
             $scope.loadPublications = function (data, callback) {
+                $scope.loading = true
                 $ok($scope.url_search_article({company_id: $scope.company.id}), data, function (resp) {
                     callback(resp);
                     $scope.data = resp;
                     callback($scope.data);
+                }).finally(function(){
+                    $scope.loading = false
                 });
             };
 
             $scope.grid_action = function (id, action, row, column_name) {
-                if (action === 'edit') {
+                if (action === 'EDIT') {
                     window.location.href = $scope.url_update_publication({'publication_id': row['id']});
                     return;
                 }
@@ -114,7 +117,11 @@
     <div ng-controller="article_list" ng-cloak>
        <!-- <h2>{{ _('Publications at portal `%(data.portal.name)s` (of company `%(data.company.name)s`)')}}</h2> -->
         <h2>{{ _('Publications at portal') }}</h2>
-        <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1"></div>
+        <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
+            <div class="well grid-loading" ng-show="loading">
+              <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
+            </div>
+        </div>
     </div>
     {% endraw %}
 
