rewrite "article show form" endpoint

--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -35,7 +35,7 @@
 
             $scope.amidSave = function (resp) {
                 if (!$scope.data.article.id && resp.article.id) {
-                    window.location.href = {{ raw_url_for('article.article_show_form')|safe }}({material_id: resp.article.id})
+                    window.location.href = {{ raw_url_for('article.article_show_form')|safe }}({company_id:article.company_id, material_id:resp.article.id})
                 }
                 else {
                     add_message($scope._($scope.article_type + ' was saved'), 'success', 3000);
@@ -45,7 +45,7 @@
 
             $scope.goToArticle = function (article) {
                 if ($scope.article_type === 'material') {
-                    url = {{ raw_url_for('article.material_details')|safe }}({material_id: article.id})
+                    url = {{ raw_url_for('article.material_details')|safe }}({company_id:article.company_id, material_id: article.id})
                 } else if ($scope.article_type === 'publication') {
                     url = ('//' + article.portal.host + {{ raw_url_for('front.details')|safe }}({article_portal_division_id: article.id}))
                 }
