--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -51,8 +51,8 @@
             };
 
 
-            $scope.updateMaterial = function (material_id) {
-                window.location.href = $scope.url_update_material({'material_id': material_id})
+            $scope.updateMaterial = function (material_id, company_id) {
+                window.location.href = $scope.url_update_material({'company_id':company_id,'material_id': material_id})
             };
 
             $scope.get_local_time = function (date) {
@@ -63,7 +63,7 @@
             $scope.grid_action = function (id, action, row, column_name) {
                 'use strict';
                 if (action === 'EDIT') {
-                    window.location.href = $scope.url_update_material({'publication_id': row['publication']['id']});
+                    window.location.href = $scope.url_update_material({'company_id':row.own_company.id,'publication_id': row['publication']['id']});
                     return;
                 }
 
@@ -151,12 +151,12 @@
         <h4>{{ _('Created at') }} {{get_local_time(data.material.cr_tm)}}</h4>
         <h4>{{ _('Last modified at') }} {{get_local_time(data.material.md_tm)}}</h4>
         <hr/>
-        <button pr-user-can="data.actions.EDIT" class="btn fr" ng-click="updateMaterial(data.material.id)
+        <button pr-user-can="data.actions.EDIT" class="btn fr" ng-click="updateMaterial(data.material.id, data.material.company_id)
         ">{{ _('Update material') }}</button>
         <div class="material-details-article-preview">
             {% endraw %}{% include 'partials/article_details.html' %}{% raw %}
         </div>
-        <button pr-user-can="data.actions.EDIT" class="btn fr" ng-click="updateMaterial(data.material.id)">{{ _('Update
+        <button pr-user-can="data.actions.EDIT" class="btn fr" ng-click="updateMaterial(data.material.id, data.material.company_id)">{{ _('Update
             material') }}</button>
         <br/><br/>
         <hr/>
