--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row block-resp">
-            <a href="{{ url_for('general.send_email_create_portal') }}">
+            <a href="{{ url_for('general.help') }}">
             <div pr-test="CreatePortal" class="col-lg-6 col-md-6 col-sm-6 col-xs-12 index-links">
                 <span><i class="fa fa-pencil fa-3x"></i></span>
                 {{ __('index left text to publishers') }}
