--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -125,7 +125,7 @@
 
 {% endblock content %}
 
-{% block scripts %}
-    {% include 'partials/portal_footer_Profireader.html' %}
-{% endblock scripts %}
 
+{% block footer %}
+    {% include 'partials/portal_footer_Profireader.html' %}
+{% endblock footer %}
