--- a/profapp/templates/portal/tags.html
+++ b/profapp/templates/portal/tags.html
@@ -43,6 +43,7 @@
                 <div class="pr-row" ng-repeat="tag in data.portal.tags">
                     <div class="pr-cell">{{ tag.tag }}</div>
                     <div class="pr-cell" ng-repeat="division in data.portal.divisions"><label style="width: 100%"><input
+                            ng-checked="division.tags[tag.id]"
                             type="checkbox"/></label></div>
                     <div class="pr-cell">
                         <button ng-click="remove_tag()">Remove</button>
