--- a/profapp/templates/front/bird/articles-list.html
+++ b/profapp/templates/front/bird/articles-list.html
@@ -45,7 +45,10 @@
 
 
 </script>
+{% set article_count = 0 %}
+{% set wide_banners = {1:'1',2:'2',3:'3',4:'4',5:'5',6:'6'} %}
 {% for article_id, article in articles.items() %}
+    {% set article_count = article_count + 1 %}
     <div class="block-item list-elements">
         <div class="item-type article">
             <a href="{{ url_for('front.division', division_name=article['division']['name'], page=1, search_text='') }}">{{ article['division']['name']|safe }}</a>
@@ -78,6 +81,11 @@
         <img {{ prImage(article['image_file_id']) }} class="block-item-img"/>
 
     </div>
+    {% if article_count in wide_banners and portal.advs['wide_banner_' + wide_banners[article_count]] %}
+        <div class="block-item list-elements">
+            {{ portal.advs['wide_banner_' + wide_banners[article_count]]|safe }}
+        </div>
+    {% endif %}
 {% else %}
 <h1>{{ _('There are no articles in this division') }}</h1>
 {% endfor %}
