--- a/profapp/templates/front/forester/articles-list.html
+++ b/profapp/templates/front/forester/articles-list.html
@@ -44,7 +44,7 @@
 
 </script>
 {% set article_count = 0 %}
-{% set wide_banners = {1:'1',2:'2',4:'3'} %}
+{% set wide_banners = {1:'1',2:'2',3:'3',4:'4',5:'5',6:'6'} %}
 {% for article_id, article in articles.items() %}
     {% set article_count = article_count + 1 %}
     <div class="block-item list-elements">
