--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -26,11 +26,11 @@
 <div class="row bg-index">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <!--<div class="col-lg-12">
                 <h4>Profireader.com
                     {{ __('index bottom text to readers') }}
                 </h4>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
