--- a/profapp/templates/portal/tags.html
+++ b/profapp/templates/portal/tags.html
@@ -11,23 +11,37 @@
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('portal_tags');
             $scope.$$translate = {{translates('CompanyProfile') | safe}};
 
-            console.log($scope.$af);
 
             $scope.data = {};
+            $scope.tags_to_remove = {};
 
-
-            {#            $scope.new_tag = '';#}
+            $scope.beforeSave = function (datatosave) {
+                datatosave.portal.tags = _.filter(datatosave.portal.tags, function (tag) {
+                    return !$scope
+                            .tags_to_remove[tag['id']];
+                });
+                return datatosave;
+            };
 
             $scope.add_tag = function () {
-                $scope.data.portal.tags.push({'id': null, 'tag': $scope.new_tag, 'portal_id': $scope.data.portal.id});
+                var newTagId = randomHash();
+                $scope.data.portal.tags.push({'id': newTagId, 'tag': $scope.new_tag});
+                for (var division_ind = 0; division_ind < $scope.data.portal.divisions.length; division_ind++) {
+                    $scope.data.portal.divisions[division_ind].tags[newTagId] = true;
+                }
                 $scope.new_tag = '';
+            }
+
+            $scope.remove_tag = function (tag_id, undo_remove) {
+                if (undo_remove) delete $scope.tags_to_remove[tag_id];
+                else $scope.tags_to_remove[tag_id] = true;
             }
         });
     </script>
     {% raw %}
     <div ng-controller="portal_tags" ng-cloak>
         <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12"
-             af aaf-after-save="afterSave" aaf-after-load="afterLoad" ng-model="data">
+             af af-before-save="beforeSave" aaf-after-save="afterSave" aaf-after-load="afterLoad" ng-model="data">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <button class="btn btn-default pull-right border-radius"
                         type="button" ng-click="$af.save(data)"
@@ -41,12 +55,16 @@
                     <div class="pr-cell">actions</div>
                 </div>
                 <div class="pr-row" ng-repeat="tag in data.portal.tags">
-                    <div class="pr-cell">{{ tag.tag }}</div>
-                    <div class="pr-cell" ng-repeat="division in data.portal.divisions"><label style="width: 100%"><input
-                            ng-checked="division.tags[tag.id]"
-                            type="checkbox"/></label></div>
-                    <div class="pr-cell">
-                        <button ng-click="remove_tag()">Remove</button>
+                    <div class="pr-cell"><input ng-disabled="tags_to_remove[tag.id]" ng-model="tag.tag"/></div>
+                    <div class="pr-cell" ng-repeat="division in data.portal.divisions">
+                        <label
+                                style="width: 100%"><input
+                                ng-checked="division.tags[tag.id]"
+                                ng-disabled="tags_to_remove[tag.id]"
+                                type="checkbox"/></label></div>
+                    <div class="pr-cell" style="width: 10em;">
+                        <button ng-if="!tags_to_remove[tag.id]" ng-click="remove_tag(tag.id, false)">Remove</button>
+                        <button ng-if="tags_to_remove[tag.id]" ng-click="remove_tag(tag.id, true)">Undo remove</button>
                     </div>
                 </div>
             </div>
